created signUp page

--- a/src/components/formSection/formSignUp/styleFormSignUp.css
+++ b/src/components/formSection/formSignUp/styleFormSignUp.css
@@ -1,4 +1,127 @@
 .fullNameInputCont {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
+}
+
+.svgOrgContainer {
+	display: flex;
+	justify-content: space-between;
+	margin: 1rem 0;
+}
+
+.svgOrg  {
+	padding: 1rem 1.8rem;
+	border: 1px solid #E4E6EF;
+	margin-right: 1rem;
+	display: flex;
+    align-items: center;
+}
+
+.svgOrg:last-child {
+	margin: unset;
+}
+
+.orLine {
+	display: flex;
+}
+
+.orLine::before, 
+.orLine::after {
+	content: '';
+	position: relative;
+	flex: 1;
+	border-bottom: 1px solid #E4E6EF;
+	margin: auto 0.25em;
+	padding-top: 4px;
+} 
+
+input {
+	padding: 12px;
+	border: 1px solid #E4E6EF;
+}
+
+label {
+	font-size: 14px;
+	color: rgba(50, 59, 75, 1);
+}
+
+input[type=submit] {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	padding: .7rem 1.5rem;
+	background-color: rgba(56, 166, 64, 1);
+	border: none;
+	border-radius: 1px;
+	color: rgba(255, 255, 255, 1);
+	margin-top: 1.5rem;
+}
+
+.productCategorCheckboxes {
+	display: flex;
+	flex-wrap: wrap;
+}
+.checkboxCont {
+	width: 32%;
+}
+.checkboxCont:last-child {
+	width: 200px;
+}
+
+input[type=checkbox] + label {
+	display: block;
+	margin: 0.2em;
+	cursor: pointer;
+	padding: 0.2em;
+}
+  
+input[type=checkbox] {
+	display: none;
+}
+  
+input[type=checkbox] + label:before {
+	content: "✔";
+	border: 0.1em solid rgba(56, 166, 64, 1);
+	border-radius: 0.2em;
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	padding-left: 0.3em;
+	padding-bottom: 0.3em;
+	margin-right: 0.5em;
+	vertical-align: bottom;
+	color: transparent;
+	transition: .2s;
+}
+  
+input[type=checkbox] + label:active:before {
+	transform: scale(0);
+}
+  
+input[type=checkbox]:checked + label:before {
+	color: rgba(56, 166, 64, 1);
+	transform: scale(1);
+
+}
+  
+input[type=checkbox]:disabled + label:before {
+	transform: scale(1);
+	border-color: #aaa;
+}
+  
+input[type=checkbox]:checked:disabled + label:before {
+	transform: scale(1);
+	background-color: #bfb;
+	border-color: #bfb;
+}
+
+.haveAccSignIn {
+	padding-top: 1.5rem;
+}
+
+.haveAccSignIn > a {
+	color: rgba(56, 166, 64, 1);
+	text-decoration: none;
 }
