--- a/src/components/asideSection/styleAsideSection.css
+++ b/src/components/asideSection/styleAsideSection.css
@@ -1,6 +1,28 @@
-main {
-    display: flex;
-}
 aside {
-    background-color: rgba(56, 166, 64, 0.04);
+	background-color: #F7F9F4;
+	max-width: 50vw;
+	width: 100%;
+}
+
+aside header {
+	display: flex;
+	justify-content: center;
+}
+
+aside main,
+.feelterAdvantageCont {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.carouselContaner {
+	max-width: 400px;
+	background: rgba(255, 255, 255, 1);
+	border-radius: 15px;
+	box-shadow: 0px 2px 30px 0px rgb(194 200 205 / 25%);
+}
+
+.feelterAdvantage {
+	max-width: 608px;
+	max-height: 340px;
 }
