--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,30 @@
+body > div,
+body > div > main {
+	height: inherit;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 main {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 #overlay {
@@ -30,4 +35,19 @@ main {
 	width: 100%;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.3);
+}
+
+h2 {
+	font-size: 1.9rem;
+}
+
+h3 {
+	font-size: 16px;
+}
+
+@media screen and (max-width: 1000px) {
+	main {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 }
