--- a/src/components/asideSection/reasonCoosenFeelterCarousel/reasonCoosenFeelterCarousel.css
+++ b/src/components/asideSection/reasonCoosenFeelterCarousel/reasonCoosenFeelterCarousel.css
@@ -1,6 +1,7 @@
 .slick-slider {
 	display: flex;
 	align-items: center;
+	box-shadow: 0px 2px 30px rgba(194, 200, 205, 0.25);
 }
 
 .prevArrow {
@@ -26,6 +27,7 @@
 .carouselProd {
 	display: flex !important;
 	padding-top: 2rem;
+	transform: translateX(1px);
 }
 
 .carouselProdTextCont {
@@ -45,4 +47,16 @@
 
 .carouselProdPic {
 	border-radius: 15px;
+}
+
+
+@media screen and (max-width: 1000px) {
+	.carouselProd {
+		flex-direction: column;
+	}
+
+	.carouselProdTextCont {
+		padding-left: 0;
+		padding-top: 1rem;
+	}
 }
