--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 body > div,
 body > div > main {
-	height: inherit;
+	min-height: inherit;
 }
 
 .App {
 	text-align: center;
 }
 
-main {
+/* main {
 	display: flex;
 	justify-content: space-between;
-}
+} */
 
 .App-header {
 	background-color: #282c34;
@@ -33,7 +33,7 @@ main {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	background: rgba(0, 0, 0, 0.3);
 }
 
