--- a/src/components/auth/signUp/formSignUp/styleFormSignUp.css
+++ b/src/components/auth/signUp/formSignUp/styleFormSignUp.css
@@ -13,7 +13,7 @@
 	margin: 1rem 0;
 }
 
-.svgOrg  {
+.svgOrg {
 	display: grid;
 	justify-content: center;
 	align-items: center;
@@ -65,12 +65,13 @@ input[type=submit] {
 }
 
 .productCategorCheckboxes {
-	display: flex;
+	display: grid;
+	grid-template-columns: 33% 30% 30%;
 	flex-wrap: wrap;
+	row-gap: .5rem;
+	column-gap: 1rem;
 }
-.checkboxCont {
-	width: 32%;
-}
+
 .checkboxCont:last-child {
 	width: 200px;
 }
@@ -91,8 +92,8 @@ input[type=checkbox] + label:before {
 	border: 0.1em solid rgba(56, 166, 64, 1);
 	border-radius: 0.2em;
 	display: inline-block;
-	width: 1em;
-	height: 1em;
+	width: 1.1em;
+	height: 1.1em;
 	padding-left: 0.3em;
 	padding-bottom: 0.3em;
 	margin-right: 0.5em;
@@ -128,7 +129,7 @@ input[type=checkbox]:checked:disabled + label:before {
 
 .haveAccSign {
 	display: flex;
-    justify-content: center;
+	justify-content: center;
 	font-weight: 700;
 	padding-top: 1.5rem;
 }
@@ -140,6 +141,15 @@ input[type=checkbox]:checked:disabled + label:before {
 	padding-left: .5rem;
 }
 
+.prodCategory.formContainer {
+	min-height: inherit;
+	margin-left: 340px;
+}
+
+.prodCategory.formContainer header {
+	flex-direction: column;
+	align-items: center;
+}
 
 @media screen and (max-width: 1000px) {
 	.svgOrgContainer {
