--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body > div > main {
 .flexSpaceBetween {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .errorStyle {
@@ -72,7 +73,7 @@ h5 {
 .sideFixedNav {
 	display: flex;
 	flex-direction: column;
-	max-width: 15%;
+	max-width: 20%;
 	width: 100%;
 }
 
