--- a/src/App.css
+++ b/src/App.css
@@ -70,18 +70,240 @@ h5 {
 	font-size: 1rem;
 }
 
+a.navTabLink {
+	padding: 1.2rem 2rem;
+	cursor: pointer;
+	color: rgba(132, 137, 147, 1);
+	text-decoration: unset;
+	padding-left: 3rem;
+}
+
+.custSubmit {
+	display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 1.5rem;
+    background-color: rgba(56, 166, 64, 1);
+    border: none;
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 1);
+	cursor: pointer;
+}
+
 .sideFixedNav {
 	display: flex;
 	flex-direction: column;
 	max-width: 20%;
 	width: 100%;
+	padding-top: 2.5rem;
 }
 
 .sideFixedNav a {
 	color: rgba(50, 59, 75, 1);
 	text-decoration: none;
-	margin: 1rem 0;
+	padding: 1rem 0;
 	margin-left: 1rem;
+	line-height: 1;
+}
+
+.sideFixedNav a.active {
+	background: rgba(243, 250, 244, 1);
+}
+
+.listAccSetContainer {
+	position: absolute;
+    right: 2rem;
+    width: 14%;
+	background: #FFFFFF;
+	box-shadow: 0px 0px 32px rgba(94, 94, 94, 0.16);
+	border-radius: 4px;
+}
+
+.listAccSetContainer ul {
+	padding: 0;
+	margin: 1rem;
+}
+
+.listAccSetContainer li {
+	list-style-type: none;
+}
+
+.listAccSetContainer li a,
+.listAccSetContainer li button {
+	text-decoration: none;
+	color: rgba(50, 59, 75, 1);
+	display: flex;
+	align-items: center;
+	padding: .875rem;
+}
+
+.listAccSetContainer li button {
+	background: inherit;
+    border: none;
+    cursor: pointer;
+    padding: 1rem;
+	width: 100%;
+	font-size: 1rem;
+}
+
+.listAccSetContainer li button svg {
+	padding-right: .5rem;
+}
+
+.listAccSetContainer li a.active {
+	background-color: rgba(246, 247, 250, 1);
+}
+
+.listAccSetContainer li a svg {
+	padding-right: .5rem;
+}
+
+.accSettings {
+	width: 80%;
+	background: rgba(249, 249, 249, 1);
+	padding: 1.5rem;
+}
+
+.accSettings > section > .settingsTabContainer {
+	margin-bottom: -1px;
+}
+
+.accSettings > section > .settingsTabContainer > a {
+	border: 1px solid #E4E6EF;
+    /* border-radius: 3px; */
+    background: #fff;
+	padding-left: 2.5rem;
+    padding-bottom: 1.1rem;
+}
+
+.accSettings > section > .settingsTabContainer > a:first-of-type:not(:last-of-type) {
+	border-radius: 4px 0 0 0;
+}
+
+.accSettings > section > .settingsTabContainer > a:last-of-type:not(:first-of-type) {
+	border-radius: 0 4px 0 0;
+}
+
+.accSettings > section > .settingsTabContainer > a.active {
+	border-bottom: none;
+}
+
+.accSettings > section > form {
+	background-color: rgba(255, 255, 255, 1);
+	border: 1px solid #E4E6EF;
+	margin-top: 1.1rem;
+	padding-left: 2.5rem;
+}
+
+.accSettings > section > form h3 {
+	margin-top: 0;
+	padding-top: 20px;
+}
+
+.accSettings h2 {
+	margin: 0;
+	padding-bottom: 1.5rem;
+}
+
+.headerClientProps {
+	display: flex;
+	align-items: center;
+	height: min-content;
+}
+
+.headerClientProps > .localOrg {
+	margin-left: 4rem;
+    margin-right: 2rem;
+	text-decoration: none;
+    color: inherit;
+}
+
+.headerClientProps .notification {
+	margin: 0 1.5rem;
+}
+
+.headerClientProps button.toggleAppSettings {
+	border: none;
+    transform: translateY(15%);
+    cursor: pointer;
+    background: #fff;
+    padding: 0;
+}
+
+.headerClientProps button.toggleAppSettings img {
+    display: flex;
+	width: 2rem;
+}
+
+.iconContainer > svg {
+	fill: #323B4B;
+}
+
+.iconContainer.active {
+	color: #38A640;
+	font-weight: 700;
+}
+
+.iconContainer.active > svg {
+	fill: #38A640;
+}
+
+.changePicContainer {
+	display: flex;
+}
+
+.changePicContainer > img {
+	align-self: center;
+}
+
+.changePicContainer > .changePicLabelAction {
+	margin-left: 1.5rem;
+}
+
+.changePicContainer > .changePicLabelAction h5 {
+	margin: 0;
+}
+
+.changePicContainer > .changePicLabelAction p {
+	margin-top: .5rem;
+    margin-bottom: 1.5rem;
+	color: rgba(160, 160, 160, 1);
+}
+
+.changePicContainer > .changePicLabelAction label.custSubmit,
+.accSettings input[type=submit] {
+	width: fit-content;
+}
+
+.changePicContainer > .changePicLabelAction input[type=file] {
+	display: none;
+}
+
+form .updPersInfoInputs {
+	display: flex;
+    flex-direction: column-reverse;
+	max-width: 700px;
+    width: 100%;
+	margin-top: 1.5rem;
+}
+form .updPersInfoInputs input {
+	border: 1px solid #E4E6EF;
+	border-radius: 4px;
+	height: 2.25rem;
+	padding-left: 1rem;
+	font-size: 1rem;
+	color: rgba(50, 59, 75, 1);
+}
+
+form .updPersInfoInputs label {
+	cursor: pointer;
+	margin-bottom: 4px;
+}
+
+form > input[type=submit] {
+	margin-top: 1.5rem;
 }
 
 @media screen and (max-width: 1000px) {
@@ -90,3 +312,4 @@ h5 {
 		justify-content: center;
 	}
 }
+
