added dropdown and integrityChecking components

--- a/src/App.css
+++ b/src/App.css
@@ -315,10 +315,14 @@ form > input[type=submit] {
 	margin-top: 1.5rem;
 }
 
+.Dropdown-menu {
+	top: auto !important; 
+	bottom: 100%
+}
+
 @media screen and (max-width: 1000px) {
 	main {
 		flex-wrap: wrap;
 		justify-content: center;
 	}
 }
-
